update boutique proximitee

--- a/EBoutique_API/clean_file_boutique.ipynb
+++ b/EBoutique_API/clean_file_boutique.ipynb
@@ -695,13 +695,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "441c7393",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "id_produit      int64\n",
        "nom_produit    object\n",
        "prix            int64\n",
        "couleur        object\n",
@@ -713,7 +714,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "523b891e",
    "metadata": {},
    "outputs": [
@@ -763,7 +764,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>57</td>\n",
        "      <td>Poco C3 64 C3 64</td>\n",
        "      <td>8999</td>\n",
        "      <td>Black</td>\n",
@@ -774,69 +775,69 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Poco C3 64 C3 64</td>\n",
-       "      <td>8999</td>\n",
-       "      <td>Black</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Poco M3 64 M3 64</td>\n",
+       "      <td>10999</td>\n",
+       "      <td>Blue</td>\n",
        "      <td>64</td>\n",
        "      <td>4</td>\n",
-       "      <td>30</td>\n",
-       "      <td>https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...</td>\n",
+       "      <td>100</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/61MYP5oYCx...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Poco C3 64 C3 64</td>\n",
-       "      <td>8999</td>\n",
-       "      <td>Black</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Poco M2 Reloaded 64 M2 Reloaded 64</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>Blue</td>\n",
        "      <td>64</td>\n",
        "      <td>4</td>\n",
-       "      <td>30</td>\n",
-       "      <td>https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...</td>\n",
+       "      <td>98</td>\n",
+       "      <td>https://i.ebayimg.com/images/g/EGUAAOSwYV1lhxl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Poco C3 64 C3 64</td>\n",
-       "      <td>8999</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>64</td>\n",
-       "      <td>4</td>\n",
-       "      <td>30</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Poco C3 32 C3 32</td>\n",
+       "      <td>7999</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>32</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29</td>\n",
        "      <td>https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Poco C3 64 C3 64</td>\n",
-       "      <td>8999</td>\n",
+       "      <td>61</td>\n",
+       "      <td>Poco M3 64 M3 64</td>\n",
+       "      <td>11999</td>\n",
        "      <td>Black</td>\n",
        "      <td>64</td>\n",
-       "      <td>4</td>\n",
-       "      <td>30</td>\n",
-       "      <td>https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>100</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/61MYP5oYCx...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   boutique_id       nom_produit  prix couleur  capacite  ram  modele  \\\n",
-       "0            1  Poco C3 64 C3 64  8999   Black        64    4      30   \n",
-       "1            2  Poco C3 64 C3 64  8999   Black        64    4      30   \n",
-       "2            3  Poco C3 64 C3 64  8999   Black        64    4      30   \n",
-       "3            4  Poco C3 64 C3 64  8999   Black        64    4      30   \n",
-       "4            5  Poco C3 64 C3 64  8999   Black        64    4      30   \n",
+       "   boutique_id                         nom_produit   prix couleur  capacite  \\\n",
+       "0           57                    Poco C3 64 C3 64   8999   Black        64   \n",
+       "1           58                    Poco M3 64 M3 64  10999    Blue        64   \n",
+       "2           59  Poco M2 Reloaded 64 M2 Reloaded 64   9999    Blue        64   \n",
+       "3           60                    Poco C3 32 C3 32   7999    Blue        32   \n",
+       "4           61                    Poco M3 64 M3 64  11999   Black        64   \n",
        "\n",
-       "                                               image  \n",
-       "0  https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...  \n",
-       "1  https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...  \n",
-       "2  https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...  \n",
-       "3  https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...  \n",
-       "4  https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...  "
+       "   ram  modele                                              image  \n",
+       "0    4      30  https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...  \n",
+       "1    4     100  https://m.media-amazon.com/images/I/61MYP5oYCx...  \n",
+       "2    4      98  https://i.ebayimg.com/images/g/EGUAAOSwYV1lhxl...  \n",
+       "3    3      29  https://i.ebayimg.com/00/s/MTUwMFg3MDY%3D/z/jZ...  \n",
+       "4    6     100  https://m.media-amazon.com/images/I/61MYP5oYCx...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "efcfaab6",
    "metadata": {},
    "outputs": [],
